--- a/aboutme.html
+++ b/aboutme.html
@@ -10,10 +10,15 @@
 
     <div class="intro">
       <h1>Brian Childs</h1>
-      <h2>A pilot who learned to program</h2>
+      <h2>Seattle-based Pilot & Product Manager</h2>
+
+    <img src="img/the-office.jpg" alt="cockpit of Kingair 200">
     </div>
 
+
     <div class="row">
+      <div class="container1">
+
 
       <div class="col-md-6">
         <div class="panel panel-default">
@@ -21,10 +26,12 @@
             <h3 class="panel-title">About Me</h3>
           </div>
           <div class="panel-body">
-            I have had several "chapters" in my professional life. After college I learned to fly aircraft and after a few years, worked overseas for the United Nations. I was the Chief Pilot for the UN in Afghanistan and Pakistan. I later flew for the US Army as a contractor in Iraq. I got an MBA, worked in corporate strategy for awhile and for the last few years have been working as a Product Manager for software companies.
+            When I was 19, I got my pilot license and after a few years, worked overseas for the United Nations. I was the Chief Pilot for the UN in Afghanistan and Pakistan. I later flew for the US Army as a contractor in Iraq. I got an MBA, worked in corporate strategy for awhile, launched my own business with a friend, and for the last few years have been working as a Product Manager for software companies.
           </div>
         </div>
       </div>
+
+
 
       <div class="col-md-6">
         <div class="panel panel-default">
@@ -37,6 +44,6 @@
         </div>
       </div>
     </div>
-
+  </div>
 
   </body>
