align image center and make responsive. Add red highlight color to place names in paragraph text

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,10 +11,15 @@
     <div class="intro">
       <h1>Brian Childs</h1>
       <h2>Seattle-based Pilot & Product Manager</h2>
-
-    <img src="img/the-office.jpg" alt="cockpit of Kingair 200">
+      <img class="img-responsive" src="img/the-office.jpg" alt="cockpit of Kingair 200">
     </div>
 
+
+    <ul class="nav nav-tabs">
+      <li role="presentation" class="active"><a href="#">About me</a></li>
+      <li role="presentation"><a href="#">Project1</a></li>
+      <li role="presentation"><a href="#">Project2</a></li>
+    </ul>
 
     <div class="row">
       <div class="container1">
@@ -26,7 +31,7 @@
             <h3 class="panel-title">About Me</h3>
           </div>
           <div class="panel-body">
-            When I was 19, I got my pilot license and after a few years, worked overseas for the United Nations. I was the Chief Pilot for the UN in Afghanistan and Pakistan. I later flew for the US Army as a contractor in Iraq. I got an MBA, worked in corporate strategy for awhile, launched my own business with a friend, and for the last few years have been working as a Product Manager for software companies.
+            When I was 19, I got my pilot license and after a few years, worked overseas for the United Nations. I was the Chief Pilot for the UN in <span class="places"> Afghanistan and Pakistan</span>. I later flew for the US Army as a contractor in <span class="places">Iraq</span>. I got an MBA, worked in corporate strategy for awhile, launched my own business with a friend, and for the last few years have been working as a Product Manager for software companies.
           </div>
         </div>
       </div>
@@ -39,7 +44,7 @@
             <h3 class="panel-title">Why I enrolled in this class</h3>
           </div>
           <div class="panel-body">
-            I joined the Epicodus evening class because I work as a Senior Product Manager for a software company in Seattle. My team was tasked with launching a public API and I found I didn't know enough about programming to direct the engineers. It motivated me to learn some basic programming skills and so far I've really enjoyed it. I plan on taking additional courses after this intro class is complete.
+            I joined the Epicodus evening class because I work as a Senior Product Manager for a software company in <span class="places">Seattle</span>. My team was tasked with launching a public API and I found I didn't know enough about programming to direct the engineers. It motivated me to learn some basic programming skills and so far I've really enjoyed it. I plan on taking additional courses after this intro class is complete.
           </div>
         </div>
       </div>
