add text description of band project including link to github repository

--- a/aboutme.html
+++ b/aboutme.html
@@ -51,4 +51,21 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="container1">
+
+      <h2 class="intro">My projects</h2>
+
+        <div class="col-md-4">
+          <img src="img/monolord.jpg" alt="band photo of monolord">
+        </div>
+
+        <div class="col-md-8">
+          <h4>Monolord band project</h4>
+          <p>This project had us construct a page about a band we enjoy. I developed a strange obsession with Swedish death metal because its loud and often has repetitive bass, both  which helps when I need to do work and concentrate. And the lyrics are essentially incomprehensible (since they are in Swedish and just guys screaming) so its not like I get distracted by the voices when I'm writing up code.</p>
+          Here's a link to the <a href="https://github.com/seattlebrian/band">Github project</a>
+        </div>
+      </div>
+    </div>
+
   </body>
