--- a/aboutme.html
+++ b/aboutme.html
@@ -17,8 +17,8 @@
 
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="#">About me</a></li>
-      <li role="presentation"><a href="#">Project1</a></li>
-      <li role="presentation"><a href="#">Project2</a></li>
+      <li role="presentation"><a href="https://github.com/seattlebrian/band" target="_blank">Project1</a></li>
+      <li role="presentation"><a href="https://github.com/seattlebrian/cupcake-shop" target="_blank">Project2</a></li>
     </ul>
 
     <div class="row">
@@ -67,5 +67,21 @@
         </div>
       </div>
     </div>
+
+
+    <div class="row">
+      <div class="container1">
+
+          <div class="col-md-4">
+            <img src="img/cupcake.jpg" alt="enumclaw cupcake shop">
+          </div>
+
+          <div class="col-md-8">
+            <h4>Cupcake shop project</h4>
+            <p>This project asked us to create an advertisement for a cupcake shop. My partner and I decided to write up an announcement for a new shop in Enumclaw. As people who grew up in the region, we decided to poke a little fun at this small town near Mt. Raineer.</p>
+            Here's a link to the <a href=https://github.com/seattlebrian/cupcake-shop>Github project</a>
+          </div>
+        </div>
+      </div>
 
   </body>
