add section with lists, both ordered and unordered, at the bottom of the page. Include icons representing good and challening things about the class.

--- a/aboutme.html
+++ b/aboutme.html
@@ -62,7 +62,7 @@
 
         <div class="col-md-8">
           <h4>Monolord band project</h4>
-          <p>This project had us construct a page about a band we enjoy. I developed a strange obsession with Swedish death metal because its loud and often has repetitive bass, both  which helps when I need to do work and concentrate. And the lyrics are essentially incomprehensible (since they are in Swedish and just guys screaming) so its not like I get distracted by the voices when I'm writing up code.</p>
+          <p>This project had us construct a page about a band we enjoy. I developed a <em>strange obsession</em> with Swedish <strong>death metal</strong> because its loud and often has repetitive bass, both  which helps when I need to do work and concentrate. And the lyrics are essentially incomprehensible (since they are in Swedish and just guys screaming) so its not like I get distracted by the voices when I'm writing up code.</p>
           Here's a link to the <a href="https://github.com/seattlebrian/band">Github project</a>
         </div>
       </div>
@@ -76,12 +76,43 @@
             <img src="img/cupcake.jpg" alt="enumclaw cupcake shop">
           </div>
 
+
           <div class="col-md-8">
             <h4>Cupcake shop project</h4>
-            <p>This project asked us to create an advertisement for a cupcake shop. My partner and I decided to write up an announcement for a new shop in Enumclaw. As people who grew up in the region, we decided to poke a little fun at this small town near Mt. Raineer.</p>
+            <p>This project asked us to create an advertisement for a cupcake shop. My partner and I decided to write up an announcement for a new shop in <strong>Enumclaw</strong>. As people who grew up in the region, we decided to poke a little fun at this small town near Mt. Ranier.</p>
             Here's a link to the <a href=https://github.com/seattlebrian/cupcake-shop>Github project</a>
           </div>
-        </div>
       </div>
+    </div>
+
+    <div class="row">
+      <div class="container1">
+
+        <h2 class="intro">What's Next?</h2>
+
+        <div class="col-md-6">
+          <img class="floats" src="img/red.jpg" alt="red icon">
+          <h3>Things I've found most challenging</h3>
+          <p>I've really struggled with the following parts of learning HTML and CSS:</p>
+          <ul>
+            <li>Floating images</li>
+            <li>Remote repositories</li>
+            <li>typing fast :)</li>
+          </ul>
+        </div>
+
+        <div class="col-md-6">
+          <img class="floats" src="img/green.png" alt="green icon">
+          <h3>What I'm exctied for</h3>
+          <p>Here are a few of the things I'm looking forward to in upcoming sections:</p>
+          <ol>
+            <li>Learning Javascript</li>
+            <li>Understanding what JQuery is</li>
+            <li>Maybe learning to type?</li>
+          </ol>
+        </div>
+
+      </div>
+    </div>
 
   </body>
